welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:27: error: too many arguments for method faireMotif: ()Unit
	faireMotif(c)
                  ^